readme changes from rst to markdown

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,10 +6,10 @@ author_email = yokoyamacode@gmail.com
 description = Command line argument parser for pythonic code
 keywords = command line, argument, option, parser
 url = https://github.com/yoko72/clappy
-long_description = file: README.rst
+long_description = file: README.md
+long_description_content_type = text/markdown
 classifiers =
     Topic :: Software Development :: Libraries :: Python Modules
-    Development Status :: 4 - Beta
 license_files = LICENSE
 
 [options]
