--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,6 @@ classifiers =
 license_files = LICENSE
 
 [options]
-py_modules = clappy
+packages = clappy
 setup_requires = wheel
-python_requires = >=3.2
-
+python_requires = >=3.6
